- Fixed an issue with kernelPatcher, it seems that kernelPatcher is unable to patch the kernelCache
- Applied some fix from the trunk
- Applied many under the hood fix
- Added Andy Vandijck Server spoof
- Added a Patch from Andy Vandijck in SMBiosPatcher and SMBiosGetters
- Added a Patch from Netkas in GraphicEnabler (ati.c)
- Fixed an issue where the GUI module couldn't find the themes directory
- Fixed an issue where the GUI module failed to display the GUI
- Added AcpiCodec module
- Re-wrote ACPI code in fake_efi.c
- Fixed a bug with AcpiPatcher when built with xcode4
- Optimized AcpiPatcher code
- Minor change of SMBIOS code in fake_efi.c
- Applied some changes to the CPU detection
- Fixed Pict-FailedBoot allocation
- Board-id fix is now handled by the smbios modules

- Added boot-args in the device tree
- Added BootCLUT and Pict-FailedBoot
- Added Board-id spoof
- Fixed kernelcache loading with 10.5, 10.6 and 10.7
- Added Lion Compatibility

- Re-enabled Ignore Boot File Flag option , now  "-B"
- Fixed a bug in get_PM_Profile(), where the function return the profile 0 = 'Unspecified' when the facp is incorrect or not found, and so, override the
  PM type set by the cpu features
- Added new drop acpi table mechanism, now it's really able to drop any tables
- BootHelp is not anymore embed by default in the bootloader core, if you need the help at boot time, just install your BootHelp.txt in /Extra/ (for now GUI module still embed it)
- Fixed the HelloWorld module (broken since i have increased module hook arguments number)

- "-F" now mean do not use prelinked kernel
- Fixed embedtheme resolution, random theme chooser now also include embedtheme in the list (if the GUI is compiled with the embedtheme option),
  also fixed a potential memory leak in randomTheme()
- Fixed a bug in modules.c introduced in the previous versions, the booloader should now load correctly 
  with or without modules
- Boot helper support (raid) is now an option (992 bytes saved)